<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createContactLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    tools:context=".CreateContact">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="name"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="phone"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="website"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_website"
        android:inputType="textWebEditText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="location"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_location"
        android:inputType="text"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/facesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/happyFace"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/happy_face"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/happy_face"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/normalFace"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/normal_face"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/normal_face"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageView
            android:id="@+id/sadFace"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/sad_face"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/sad_face"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


</LinearLayout>