<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/contacts_app"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/contactFace"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/happy_face"
            app:srcCompat="@drawable/happy_face"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/contactPhone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/contact_phone"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/phone"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageView
            android:id="@+id/contactWeb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/contact_website"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/web"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/contactLocation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/contact_location"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/location"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCreateContact"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:height="60dp"
        android:text="@string/create_new_contact"
        android:textStyle="bold" />

</LinearLayout>